--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <!-- =========== PIE DE PÁGINA (FOOTER) =========== -->
     <footer class="bg-bbva-gray-light mt-12 py-8">
         <div class="container mx-auto text-center text-bbva-gray">
-            <p>&copy; 2024 BBVA. Todos los derechos reservados.</p>
+            <p>&copy; 2024. Todos los derechos reservados.</p>
             <p class="mt-2">Acompañando tu voluntad de llegar más lejos.</p>
         </div>
     </footer>
