--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -96,8 +97,24 @@
                         <p class="mb-4">No solo se debe evaluar el número, sino también cómo se compone y qué incluye para tomar decisiones informadas.</p>
                         <ul class="list-disc list-inside space-y-2">
                             <li><strong>Modelo de Precios:</strong> Evaluar esquemas por hora/día (flexible), proyecto cerrado (alcance definido) o célula de trabajo (largo plazo).</li>
-                            <li><strong>Tarifas por Rol y Seniority:</strong> Comparar el costo de perfiles equivalentes (Ej: Desarrollador Senior, Arquitecto, QA).</li>
-                            <li><strong>Costos Ocultos o Adicionales:</strong> Identificar gastos como licencias de software, infraestructura, herramientas y viáticos.</li>
+                            <li>
+                                <strong>Tarifas por Rol y Seniority:</strong> Comparar el costo de perfiles equivalentes (Ej: Desarrollador Senior, Arquitecto, QA).
+                                👉
+                                <a href="https://docs.google.com/spreadsheets/d/1fiUXUD1_jzrnOwKcS4plZ6k9Y5fS7mjyhwHvWiP9R40/edit?usp=sharing"
+                                    target="_blank"
+                                    class="text-blue-600 underline hover:text-blue-800 transition">
+                                    Haz click para acceder al excel de Tarifas Contratos POST 2025
+                                </a>
+                            </li>
+                            <li>
+                                <strong>Costos Ocultos o Adicionales:</strong> Identificar gastos como licencias de software, infraestructura, herramientas y viáticos.
+                                👉
+                                    <a href="https://lookerstudio.google.com/u/0/reporting/3b991d63-cefe-470e-9647-ec3e1f7f907c/page/p_q7gn4tgkwd"
+                                    target="_blank"
+                                    class="text-blue-600 underline hover:text-blue-800 transition">
+                                    Haz click para acceder al Cuadro de Mando Carteras Proveedores
+                                </a>
+                            </li>
                             <li><strong>Condiciones de Contratación:</strong> Analizar la flexibilidad para escalar equipos, las políticas de pago y las penalizaciones.</li>
                         </ul>
                     </div>
@@ -171,7 +188,15 @@
                         <ul class="list-none space-y-4">
                             <li><strong class="text-bbva-blue">Nivel Operacional (Comité Operativo):</strong><br><strong>Frecuencia:</strong> Diaria.<br><strong>Objetivos:</strong> Seguimiento de tickets, revisión de cumplimiento de ANS y gestión de impedimentos.</li>
                             <li><strong class="text-bbva-blue">Nivel Táctico (Comité Directivo):</strong><br><strong>Frecuencia:</strong> Quincenal.<br><strong>Objetivos:</strong> Revisión de KPIs, gestión de problemas/riesgos, iniciativas de mejora y aprobación de presupuestos.</li>
-                            <li><strong class="text-bbva-blue">Nivel Estratégico (Comité Ejecutivo):</strong><br><strong>Frecuencia:</strong> Mensual.<br><strong>Objetivos:</strong> Revisión de informes gerenciales, desempeño global y aprobación final de pagos y presupuestos.</li>
+                            <li>
+                                <strong class="text-bbva-blue">Nivel Estratégico (Comité Ejecutivo):</strong><br><strong>Frecuencia:</strong> Mensual.<br><strong>Objetivos:</strong> Revisión de informes gerenciales, desempeño global y aprobación final de pagos y presupuestos.
+                                👉
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeBhJVMszbk852LJJ3gvFyYO9OYRF1dnmC3CUzq-XOCRAsQZg/viewform?usp=preview"
+                                    target="_blank"
+                                    class="text-blue-600 underline hover:text-blue-800 transition">
+                                    Haz click para acceder a la Encuesta Proveedor Retail 2025-Q3
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -291,3 +316,6 @@
 </body>
 </html>
 
+apps-fileview.texmex_20250925.00_p0
+index.html
+Mostrando index.html.
